--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:scrollbars="none"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:spanCount="1"
         tools:itemCount="7"
-        tools:listitem="@layout/image_list_item" />
+        tools:listitem="@layout/category_list_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
