--- a/app/src/main/res/layout/activity_wallpapers.xml
+++ b/app/src/main/res/layout/activity_wallpapers.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/wallpapers_list"
@@ -14,6 +14,6 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         tools:itemCount="4"
-        tools:listitem="@layout/image_list_item" />
+        tools:listitem="@layout/wallpaper_list_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
