--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -12,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/category"
-        android:scaleType="centerCrop"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:scaleType="centerCrop" />
 
     <TextView
         android:background="@color/gray_800"
